--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,14 @@ services:
     ports:
       - "8090:80"
     volumes:
-      - /opt/mantis/files:/opt/files
+      - ./files:/opt/files
+      - ./config/config_defaults_inc.php:/var/www/html/config_defaults_inc.php
+      - ./config/strings_portuguese_brazil.txt:/var/www/html/lang/strings_portuguese_brazil.txt
     links:
       - mysql
     restart: always
   mysql:
-    container_name: mantis_mysql
+    container_name: mantis_mariadb
     image: mariadb:latest
     environment:
       - MYSQL_ROOT_PASSWORD=root
@@ -21,7 +23,7 @@ services:
       - MYSQL_USER=mantisbt
       - MYSQL_PASSWORD=mantisbt
     volumes:
-      - /opt/mantis/mysql:/var/lib/mysql
+      - ./mysql:/var/lib/mysql
     ports:
       - "3300:3306"
     restart: always
